--- a/pom.xml
+++ b/pom.xml
@@ -9,21 +9,25 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
-        <!--<dependency>-->
-            <!--<groupId>org.apache.crunch</groupId>-->
-            <!--<artifactId>crunch-core</artifactId>-->
-            <!--<version>0.10.0</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.jdom</groupId>
+            <artifactId>jdom2</artifactId>
+            <version>2.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>jaxen</groupId>
+            <artifactId>jaxen</artifactId>
+            <version>1.1.1</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.crunch</groupId>
             <artifactId>crunch-core</artifactId>
             <version>0.9.0-hadoop2</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.apache.crunch</groupId>-->
-            <!--<artifactId>crunch-examples</artifactId>-->
-            <!--<version>0.10.0</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
